refactor: code optimize

--- a/src/main/resources/templates/includes/base.html
+++ b/src/main/resources/templates/includes/base.html
@@ -43,6 +43,10 @@
             height: 100%;
         }
 
+        input[type="file"]{
+            color: transparent;
+        }
+
         .layui-layer-title {
             background-color: #20a8d8!important;
             color: #fff!important;
