--- a/src/main/resources/templates/modules/produce_order.html
+++ b/src/main/resources/templates/modules/produce_order.html
@@ -66,6 +66,10 @@
             display: none;
         }
 
+        #form-detail tbody tr td:nth-child(1) {
+            width: 135px;
+        }
+
         #form-detail tbody tr td:nth-child(5),
         #form-detail tbody tr td:nth-child(6) {
             width: 60px;
@@ -115,7 +119,7 @@
                     <div class="form-group">
                         <label class="col-form-label mr-2" for="remark">附件</label>
                         <div class="attachment">
-                            <input type="file" multiple="multiple" name="attachment_file" id="attachment_file" data-group-name="sales" onchange="upload.ajaxFileUpload()" style="width: 100px;">
+                            <input type="file" multiple="multiple" name="attachment_file" id="attachment_file" data-group-name="sales" onchange="upload.ajaxFileUpload()" style="width: 99px;">
                             <input type="text" style="display:none;" name="attachmentList" id="attachmentList" th:value="${po.attachmentList ne null ? T(com.rick.common.util.JsonUtils).toJson(po.attachmentList) : '[]'}">
 
                             <th:block th:if="${po.attachmentList ne null}">
