--- a/src/main/resources/templates/tpl/ajax_list.html
+++ b/src/main/resources/templates/tpl/ajax_list.html
@@ -141,6 +141,11 @@
     <script th:src="@{/plugins/lodash.min.js}"></script>
 
     <script th:inline="javascript">
+        var readonly
+        /*[# sec:authorize="${hasAuthority(#vars.report.code + '_edit') or hasAuthority(#vars.report.code + '_delete')}"]*/
+            readonly = false
+        /*[/]*/
+
         $.fn.multipleSelect.locales['zh-CN'] = {
             formatSelectAll: function () {
                 return '[全选]'
@@ -251,6 +256,10 @@
         let form_id =/*[[${report.additionalInfo != null && report.additionalInfo['formId'] != null ? report.additionalInfo['formId'] : '' } + '']]*/
 
         function showDialog(title, id) {
+            if (readonly === false) {
+                title = '编辑'
+            }
+
             $('#dialog-title').text(title)
 
             $.get('/forms/page/' + form_id + (!id ? '' : '/' + id) + '?readonly=' + (title === '查看'), function (res) {
