--- a/src/main/resources/templates/tpl/form.html
+++ b/src/main/resources/templates/tpl/form.html
@@ -38,7 +38,7 @@
                 <select th:attr="disabled=${(p.name eq 'type' && formBO.form.code eq 'sys_dict') && formBO.instanceId != null}" th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).SELECT}" class="form-control" th:id="${p.name}" th:name="${p.name}"
                         th:placeholder="${p.configurer.placeholder}" th:required="${isRequired}" th:classappend="${errors eq null ? '' : (#maps.containsKey(errors, p.name) ? 'is-invalid' : 'is-valid')}">
                     <option th:if="${(p.configurer.datasource == null && formBO.form.code eq 'core_material_category' && (formBO.instanceId == null || !(#strings.equals(option.name, #strings.toString(formBO.instanceId))))) ||  !(formBO.form.code eq 'core_material_category')}" th:each="option : ${p.configurer.options}" th:value="${option.name}" th:text="${option.label}" th:selected="${option.name eq p.value}"></option>
-                    <sp:option th:if="${p.configurer.datasource != null}" th:attr="key=${p.configurer.datasource},group=${(p.configurer.getAdditionalInfo == null || p.configurer.getAdditionalInfo().get('group') == null) ? null : 'group'}" th:value="${p.value}"/>
+                    <sp:option emptyItemText th:if="${p.configurer.datasource != null}" th:attr="key=${p.configurer.datasource},group=${(p.configurer.getAdditionalInfo == null || p.configurer.getAdditionalInfo().get('group') == null) ? null : 'group'}" th:value="${p.value}"/>
                 </select>
 
                 <div th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).FILE}">
