--- a/src/main/resources/templates/tpl/ajax_list.html
+++ b/src/main/resources/templates/tpl/ajax_list.html
@@ -256,7 +256,7 @@
         let form_id =/*[[${report.additionalInfo != null && report.additionalInfo['formId'] != null ? report.additionalInfo['formId'] : '' } + '']]*/
 
         function showDialog(title, id) {
-            if (readonly === false) {
+            if (readonly === false && title !== '复制') {
                 title = '编辑'
             }
 
