chore: 特征值必填项 和 placeholder 支持以及 type验证

--- a/src/main/resources/static/css/edit-table.css
+++ b/src/main/resources/static/css/edit-table.css
@@ -25,6 +25,10 @@
     left: -8px;
 }
 
+.table-editor .characteristic-popup .required label:before, .table-editor .characteristic-popup label.required:before {
+    left: -8px;
+}
+
 .table-editor tr td.row-number, .table-editor tr td.operator {
     padding: 0 .3rem;
 }
