--- a/src/main/resources/templates/tpl/ajax_list.html
+++ b/src/main/resources/templates/tpl/ajax_list.html
@@ -31,10 +31,10 @@
                         <div class="form-group">
                             <label class="col-form-label mr-2" th:for="${f.name}" th:text="${f.label}"></label>
                             <th:block th:if="${f.type.name() ne 'DATE_RANGE'}">
-                                <input class="form-control" th:id="${f.name}" type="text" th:name="${f.name}" autocomplete th:if="${f.type.name() == 'TEXT'}">
-                                <sp:select  th:id="${f.name}" th:name="${f.name}" th:attr="key=${f.extraData}" class="form-control" th:if="${f.type.name() == 'SELECT'}"/>
-                                <sp:select  th:id="${f.name}" th:name="${f.name}" th:attr="key=${f.extraData}" class="form-control" group th:if="${f.type.name() == 'GROUP_SELECT'}"/>
-                                <sp:select  th:id="${f.name}" th:name="${f.name}" multiple th:attr="key=${f.extraData}" class="form-control" th:if="${f.type.name() == 'MULTIPLE_SELECT'}" hideAllItem/>
+                                <input class="form-control" th:id="${f.name}" type="text" th:name="${f.name}" autocomplete th:if="${f.type.name() == 'TEXT'}" th:value="${f.value}">
+                                <sp:select th:id="${f.name}" th:name="${f.name}" th:attr="key=${f.extraData}" class="form-control" th:if="${f.type.name() == 'SELECT'}" th:value="${f.value}"/>
+                                <sp:select th:id="${f.name}" th:name="${f.name}" th:attr="key=${f.extraData}" class="form-control" group th:if="${f.type.name() == 'GROUP_SELECT'}" th:value="${f.value}"/>
+                                <sp:select th:id="${f.name}" th:name="${f.name}" multiple th:attr="key=${f.extraData}" class="form-control" th:if="${f.type.name() == 'MULTIPLE_SELECT'}" hideAllItem th:value="${f.value}"/>
                             </th:block>
 
                             <th:block style="margin-bottom: 10px;" th:if="${f.type.name() == 'DATE_RANGE'}">
@@ -241,7 +241,8 @@
             $('#exportBtn').attr('href', $('#exportBtn').data('url') + "?" + $.param($listTable.ajaxTable('getQuery')))
         }
 
-        listRequest({})
+        // listRequest({})
+        $('button[name=search]').click()
 
         function openDetailLink(title, id, name) {
             return '<a href="javascript:;" onclick="showDialog(\''+title+'\', \''+id+'\')">'+name+'</a>'
