--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -125,12 +125,12 @@
                                     <th style="width: 100px;">名称</th>
                                     <th>规格</th>
                                     <th>特征值</th>
-                                    <th style="width: 100px">基本单位</th>
-                                    <th style="width: 100px" class="sortable text-right">订单数量</th>
+                                    <th style="width: 80px">基本单位</th>
+                                    <th style="width: 90px" class="sortable text-right">订单数量</th>
                                     <th style="width: 120px" class="sortable text-right" data-sort-type="number">已收货数量</th>
                                     <th style="width: 120px" class="sortable text-right" data-sort-type="number">待收货数量</th>
-                                    <th style="width: 90px" class="sortable">状态</th>
-                                    <th style="width: 120px">物料凭证</th>
+                                    <th style="width: 80px" class="sortable">状态</th>
+                                    <th style="width: 80px">物料凭证</th>
                                 </tr>
                                 </thead>
                             </table>
@@ -141,7 +141,7 @@
                                     <td th:text="${s.materialCode}" th:data-sort-value="${s.materialCode}"></td>
                                     <td th:text="${s.materialName}" th:data-sort-value="${s.materialName}"></td>
                                     <td th:text="${s.materialSpecification}" th:data-sort-value="${s.materialSpecification}"></td>
-                                    <td th:text="${s.characteristic}" th:data-sort-value="${s.characteristic}"></td>
+                                    <td th:text="${s.characteristic}" th:data-sort-value="${s.characteristic}" th:title="${s.characteristic}"></td>
                                     <td th:text="${s.unitText}" th:data-sort-value="${s.unitText}"></td>
                                     <td th:text="${#numbers.formatDecimal(s.quantity,1,'COMMA',2,'POINT')}" th:data-sort-value="${s.quantity}" th:class="text-right"></td>
                                     <td th:text="${#numbers.formatDecimal(s.goodsReceiptQuantity,1,'COMMA',2,'POINT')}" th:data-sort-value="${s.goodsReceiptQuantity}" th:class="text-right"></td>
